--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "monaco-editor": "^0.38.0",
+    "ngx-mask": "^16.2.6",
     "ngx-monaco-editor-v2": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
