--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/wicg-file-system-access": "^2020.9.6",
     "monaco-editor": "^0.38.0",
     "ngx-mask": "^16.2.8",
     "ngx-monaco-editor-v2": "^16.0.0",
