--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm install && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docker": "docker build -t chordpro:1.0.0 ."
   },
   "private": true,
   "dependencies": {
