--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chordpro",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "npm install && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "docker": "docker build -t chordpro:1.0.0 ."
+    "docker": "docker build -t chordpro-frontend:1.0.0 ."
   },
   "private": true,
   "dependencies": {
