--- a/package.json
+++ b/package.json
@@ -11,35 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/cdk": "^16.1.5",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "@types/wicg-file-system-access": "^2020.9.6",
-    "monaco-editor": "^0.38.0",
-    "ngx-mask": "^16.2.8",
-    "ngx-monaco-editor-v2": "^16.0.0",
+    "@angular/animations": "^17.2.1",
+    "@angular/cdk": "^17.2.0",
+    "@angular/common": "^17.2.1",
+    "@angular/compiler": "^17.2.1",
+    "@angular/core": "^17.2.1",
+    "@angular/forms": "^17.2.1",
+    "@angular/material": "^17.2.0",
+    "@angular/platform-browser": "^17.2.1",
+    "@angular/platform-browser-dynamic": "^17.2.1",
+    "@angular/router": "^17.2.1",
+    "@types/wicg-file-system-access": "^2023.10.4",
+    "ngx-mask": "^17.0.4",
+    "ngx-monaco-editor-v2": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "^0.13.1"
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "~16.1.3",
-    "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "~17.2.0",
+    "@angular/compiler-cli": "^17.2.1",
+    "@types/jasmine": "^5.1.4",
+    "jasmine-core": "^5.1.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.3.3"
   }
 }
